Basic verification of lol account added

--- a/public/scss/components/_variables.scss
+++ b/public/scss/components/_variables.scss
@@ -3,13 +3,18 @@ $dark-blue-hover: #022750;
 $dark-blue-active: #023872;
 $dark-blue-darker: #010f1e;
 
-$blue: #2196F3;
-$blue-active: #03A9F4;
+$blue: #2196f3;
+$blue-active: #03a9f4;
 $blue-hover: #2ebcfc;
 
+$yellow: #fe9000;
+$yellow-background: rgba(247, 176, 91, 0.35);
+
+$red: #e74c3c;
+
+$green: #2ecc71;
 
 $light-grey: #eee;
 $light-grey-hover: #ddd;
 
 $grey: #bbb;
- 
