--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -13,5 +13,7 @@ body{
 @import "fontAwesome/regular.scss";
 @import "fontAwesome/brands.scss";
 @import "components/variables.scss";
+@import "components/grid.scss";
 @import "panel/panel.scss";
 @import "panel/menu.scss";
+@import "panel/connect.scss";
