--- a/templates/panel/profile/_menu.html.twig
+++ b/templates/panel/profile/_menu.html.twig
@@ -15,17 +15,17 @@
   Profil
 </a>
 <a
-  href="{{ path('panel_profile_connect') }}"
+  href="{{ path('panel_profile_league') }}"
   class="
     sub-menu-entry
     {%
     if
     app.request.get('_route')
     ==
-    'panel_profile_connect'
+    'panel_profile_league'
     %}active{%
     endif
     %}
   "
-  >Konto LoL</a
+  >Weryfikacja</a
 >
