--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6129,6 +6129,33 @@ readers do not read off random characters that represent icons */
   font-weight: 400;
 }
 
+.row {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 24px;
+}
+
+.tile {
+  background-color: #fff;
+  padding: 15px;
+}
+
+.row-1-1 > div {
+  width: 100%;
+}
+
+.row-1-2 > div {
+  width: calc(50% - 24px);
+}
+
+.row-1-3 > div {
+  width: calc((100% / 3) - 16px);
+}
+
+.row-1-4 > div {
+  width: calc((100% / 4) - 18px);
+}
+
 .panel-container {
   position: relative;
   display: flex;
@@ -6151,12 +6178,69 @@ readers do not read off random characters that represent icons */
 
 .panel-right {
   width: calc(100% - 225px);
-  height: calc(100% - 65px);
+  height: 100%;
 }
 
 .panel-content {
   background-color: #eee;
-  height: 100%;
+  min-height: calc(100% - 65px);
+  padding: 25px;
+}
+
+.panel-emphasis {
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 3px solid rgba(247, 176, 91, 0.35);
+  background-color: #fff;
+}
+.panel-emphasis i {
+  width: 45px;
+  height: 45px;
+  color: #fe9000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 35px;
+}
+.panel-emphasis > div {
+  width: calc(100% - 60px);
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 22px;
+  color: #fe9000;
+}
+
+.panel-header {
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+
+.center {
+  text-align: center;
+}
+
+.bold-blue {
+  font-weight: 600;
+  color: #2196f3;
+}
+
+.mb-0 {
+  margin-bottom: 0 !important;
+}
+
+.mb-5 {
+  margin-bottom: 5px !important;
+}
+
+.mb-15 {
+  margin-bottom: 15px !important;
+}
+
+.panel-text {
+  font-size: 14px;
 }
 
 .main-menu-row {
@@ -6209,7 +6293,7 @@ readers do not read off random characters that represent icons */
   cursor: pointer;
   font-size: 14px;
   font-weight: 600;
-  color: #2196F3;
+  color: #2196f3;
   border-bottom: 1px solid #bbb;
 }
 .sub-menu-entry:hover {
@@ -6218,14 +6302,78 @@ readers do not read off random characters that represent icons */
   color: #fff;
 }
 .sub-menu-entry.active {
-  background-color: #03A9F4;
+  background-color: #03a9f4;
   color: #fff;
-  border-color: #03A9F4;
+  border-color: #03a9f4;
 }
 
 .sub-menu-placeholder {
   flex-grow: 1;
   border-bottom: 1px solid #bbb;
+}
+
+.connect-button {
+  margin: 0 auto;
+  display: block;
+  width: 200px;
+  height: 42px;
+  font-weight: 600;
+  font-size: 16px;
+  border: 0;
+  background-color: #2196f3;
+  cursor: pointer;
+  color: #fff;
+}
+.connect-button:hover {
+  background-color: #2ebcfc;
+}
+
+.connect-input {
+  width: 200px;
+  height: 42px;
+  margin: 0 auto;
+  display: block;
+  outline: none;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 16px;
+  color: #2196f3;
+}
+.connect-input.small {
+  color: #000;
+  text-transform: unset;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+.connect-status {
+  font-size: 24px;
+  font-weight: 700;
+}
+.connect-status.connect-status-0 {
+  color: #e74c3c;
+}
+.connect-status.connect-status-1 {
+  color: #2ecc71;
+}
+
+.connect-paired {
+  display: flex;
+  justify-content: space-between;
+}
+.connect-paired i {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 135px;
+  height: 135px;
+  padding: 25px;
+  font-size: 100px;
+  color: #2ecc71;
+}
+.connect-paired div {
+  width: calc(100% - 135px);
+  padding: 25px 25px 25px 10px;
 }
 
 /*# sourceMappingURL=main.css.map */
